--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: Technical Services Department
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Princeton University Library's Technical Services Department
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
@@ -12,3 +10,10 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+
+# Assets
+#
+# We specify the directory for Jekyll so we can use @imports.
+sass:
+  sass_dir:          _sass
+  style:            :compressed
