--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Technical Services Department
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Princeton University Library's Technical Services Department
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/tsd" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
