--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,14 @@
 # Site settings
-title: Technical Services Department
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Princeton University Library's Technical Services Department
-baseurl: "/tsd" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-
+title:              Technical Services Department
+email:              bszwast@princeton.edu
+description:        > # this means to ignore newlines until "baseurl:"
+                    Princeton University Library's Technical Services Department
+baseurl:            "/tsd" # the subpath of your site, e.g. /blog/
+url:                "" # the base hostname & protocol for your site
+twitter_username:   jekyllrb
+github_username:    jekyll
 # Build settings
-markdown: kramdown
-
+markdown:           kramdown
 # Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
